# drf-blog

./: README.md
react-drf-blog-api/: .gitignore  README.md  env.template  manage.py  pyproject.toml
react-drf-blog-api/blog/: admin.py  factories.py  models.py  pagination.py  serializers.py  tests.py  views.py
react-drf-blog-api/blog/migrations/: 0001_initial.py
react-drf-blog-api/category/: admin.py  factories.py  models.py  serializers.py  tests.py  views.py
react-drf-blog-api/category/migrations/: 0001_initial.py
react-drf-blog-api/core/: utils.py
react-drf-blog-api/drf_blog/: asgi.py  urls.py  wsgi.py
react-drf-blog-api/drf_blog/settings/: base.py  dev.py  local.py  prod.py
react-drf-blog-api/post/: admin.py  factories.py  models.py  pagination.py  serializers.py  tests.py  views.py
react-drf-blog-api/post/migrations/: 0001_initial.py
react-drf-blog-api/scripts/: local_data_reset.sh  test_data.py  test_data_generator.py
react-drf-blog-api/tag/: admin.py  factories.py  models.py  serializers.py  tests.py  views.py
react-drf-blog-api/tag/migrations/: 0001_initial.py
react-drf-blog-web/: .env.development  .env.production  .eslintrc.json  README.md  package-lock.json  package.json
react-drf-blog-web/public/: index.html
react-drf-blog-web/src/: App.js  index.js
react-drf-blog-web/src/components/: Category.js  Loading.js  RouteChangeTracker.js  Tag.js  Utterances.js
react-drf-blog-web/src/hooks/: useSessionStorage.js
react-drf-blog-web/src/layouts/: Footer.js  Header.js  Layout.js
react-drf-blog-web/src/pages/: Index.js  NotFound.js  (+2 more)
(+1 files in other folders)
